SERVER-120978 Always advance lastOp before waiting for majority in setFCV (#58469)

GitOrigin-RevId: 316c1c64a21f167407bed2bef73d04a2d9518727